--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -135,3 +135,32 @@
         transform: scale(1.1);
     }
 }
+
+/* Estilos para submenús (dropdown-submenu) */
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu > .dropdown-toggle::after {
+    transform: rotate(-90deg);
+    position: absolute;
+    right: 1rem;
+}
+
+.dropdown-submenu > .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-left: 0.1rem;
+    margin-top: -0.5rem;
+    display: none;
+}
+
+.dropdown-submenu:hover > .dropdown-menu {
+    display: block;
+}
+
+.dropdown-item.dropdown-toggle::after {
+    float: right;
+    margin-top: 0.5em;
+}
+
